2020-10-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use combo box for encoding in code() and calendar in date() functions

2020-10-23 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Always perform conversion to optimal (SI) unit when the expression is a number multiplied by a unit and input equals output
	* Completely disable separate to-expression when calculate-as-you-type is activated

2020-10-21 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix input of circumflex on Windows with dead circumflex without modifier (e.g. German and Swiss keyboard layouts)

2020-10-18 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improve handling of ignore comma/dot option outside of the main expression entry
	* Fix alternatives in to menu and result context menu for result in complex angle form
	* Set initial nth root dialog value to 2
	* Always use decimal base in plot dialog
	* Restore initial focus when opening dialogs a second time
	* Improve layout in insert function dialog

2020-09-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Notifications for invisible actions (e.g. result left-click copy)

2020-09-29 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Customizable keypad buttons (all buttons on the right side)

2020-09-28 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* MR, MC, MS, M+, M-
	* Fix programming keypad base conversion for negative integers
	* Improve layout of variable edit dialog
	* Change "Names Details" button label to "Properties"
	* Add and subtract to context menu of variables in STO menu
	* Show "simple" in result context menu
	* Use v1, v2, ... as default variable names, instead of var_1, var_2, ...

2020-09-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix input of circumflex with dead circumflex key on Windows with new GTK version

2020-09-13 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix check for updates on startup when accelmap is missing (Windows not affected)
