@@ -1,3 +1,15 @@
+2020-10-29 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Use icons for "Value", "Text", and "Copy" in history view
+	* Hide all history buttons when keypad is shown simultaneously
+	* Refine (handle roots) determination of visibility of rational number format popup menu items
+	* Add "Exact" menu item to result popup menu when appropriate
+	* Only copy the result when clicking the actual result image (and not any empty space to the left)
+
+2020-10-28 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Automatic fractions option (default), in qalc, which shows simple, mixed, and/or decimal fractions depending on format and contents of expression and result
+
 2020-10-25 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Use combo box for encoding in code() and calendar in date() functions
